tests/NormalTests/paczka1/fuzzy1/39305344.err
Error in line 4: BoeSfL A460 43,1
Error in line 18: 1cz A588 48,1
Error in line 25: LXeWI0Jf A588 79,5
Error in line 30: BoeSfL S910 -3,5
Error in line 29: LXeWI0Jf A460 87,0
Error in line 35: 1cz S910 60,1
Error in line 11: A588 S243 62,6
